Changes (12/16/17) - Game can now play sound - Added sounds for: 	- Background music 	- Announcer 	- Blocked hit 	- Successful hit 		- All hits currently set to the same sound 	- Ninjadouken 	- Whiffed DP - Air normals now all dash and jump cancelable - Reduced air normal magic series - Juggle knockback now increases on each comboing hit rather than decreasing - Homing jump actually homes in instead of teleporting
Bug Fixes
- Certain light attacks are no longer unblockable when facing left
- Combos have gone back to ending after two knockdowns
- Fixed dashes being read by buffering a delayed button
- Reduced height reached by launching an opponent a second time in a combo